# tree-sitter-bazel

./: .bazelrc  .gitignore  .set_bazel_version.sh  BUILD  CHANGELOG.md  CODEOWNERS  INSTALL.md  MODULE.bazel  README.md  VERSION  WORKSPACE  WORKSPACE.bzlmod  buildbuddy.yaml  cc_deps.bzl  deps.bzl  extensions.bzl  repositories.bzl  rules.bzl  version.bzl
.github/workflows/: Bazel-6.yml  Bazel.yml  buildifier.yml  check-new-release.yml
build_config/: BUILD
build_config/hide_symbols/: BUILD
build_config/wasm/: BUILD
lib/include/tree_sitter/: BUILD
lib/src/: BUILD
lib/src/portable/: BUILD
lib/src/unicode/: BUILD
